fix button show hide menu on mobile

--- a/src/Components/Layout/HeaderMenu.css
+++ b/src/Components/Layout/HeaderMenu.css
@@ -111,6 +111,14 @@ Màu cho Dashboard header
 .anticon-close{
     color: red;
 }
+.ant-btn-icon-only {
+    background: transparent;
+    border:transparent;
+}
+.ant-btn-icon-only:hover {
+    background: transparent;
+    border:transparent;
+}
 
 
 @media screen and (min-width:991px) {
